--- a/src/app/components/pages/_dialogs/view-project/view-project.component.html
+++ b/src/app/components/pages/_dialogs/view-project/view-project.component.html
@@ -1,20 +1,35 @@
 <div mat-dialog-title class="d-flex justify-content-between  align-items-center py-1 px-2">
     <div class="d-flex">
         <div>
-            <button [mat-dialog-close]="false" mat-icon-button tabindex="-1"><mat-icon class="app-green-color">arrow_back_ios</mat-icon></button>
+            <button *ngIf="!buyNow" [mat-dialog-close]="false" mat-icon-button tabindex="-1"><mat-icon class="app-green-color">arrow_back_ios</mat-icon></button>
+            <button *ngIf="buyNow" (click)="buyNow = false" mat-icon-button tabindex="-1"><mat-icon>arrow_back</mat-icon></button>
         </div>
 
         <h5 class="mb-0 ml-3 w-100 d-flex align-items-center justify-content-between">
-            <span>{{data?.name}}</span>
+            <span>{{ buyNow ? 'Type your phone' : data?.name}}</span>
         </h5>
     </div>
 </div>
 <mat-dialog-content class="mt-0 bg-white  h-100">
-    <h2 class="text-bold">&#8358;{{data?.price | number:'.2'}}</h2>
-    <img class="w-100 mb-4   rounded-10 shadow-sm" [src]="data?.img">
-
-    <button type="button" [mat-dialog-close]="true" tabindex="-1" mat-raised-button class="view-button rounded-60  w-100 mt-2  py-1">
+    <div *ngIf="!buyNow" class="animated faster fadeInLeft">
+        <h2 class="text-bold">&#8358;{{data?.price | number:'.2'}}</h2>
+        <img class="w-100 mb-4   rounded-10 shadow-sm" [src]="data?.img">
+        <!-- (click)="buyNow = true" -->
+        <button type="button" [mat-dialog-close]="true" tabindex="-1" mat-raised-button class="view-button shadow-sm rounded-60  w-100 mt-2  py-1">
          BUY NOW
     </button>
+    </div>
+
+    <!-- <form [formGroup]="form" *ngIf="buyNow" (ngSubmit)="onFormSubmit()" class="form animated faster fadeInRight">
+        <mat-form-field class="w-100" appearance="outline">
+            <mat-label>Phone Number</mat-label>
+            <input type="tel" matInput formControlName="phone" placeholder="Phone Number" required>
+            <mat-icon matSuffix>phone</mat-icon>
+        </mat-form-field>
+
+        <button tabindex="-1" mat-raised-button class="view-button shadow-sm rounded-60  w-100 mt-2  py-1">
+            CONTINUE
+       </button>
+    </form> -->
 
 </mat-dialog-content>
