--- a/src/app/components/pages/_dialogs/view-project/view-project.component.scss
+++ b/src/app/components/pages/_dialogs/view-project/view-project.component.scss
@@ -37,6 +37,23 @@
         font-size: 23px;
         font-weight: 500;
     }
+    .form {
+        /* Border */
+        .mat-form-field-appearance-outline .mat-form-field-outline {
+            color: transparent;
+            // background-color: red;
+            // background-color: var(--appRedLight);
+            background-color: #eee;
+            border-radius: 9px !important;
+        }
+        /* Font color */
+        input.mat-input-element {
+            // color: #fff !important;
+        }
+        textarea.mat-input-element {
+            // color: #fff !important;
+        }
+    }
     @media screen and (min-width: 767px) {
         .mat-dialog-content {
             padding-left: 30px;
