pending payment and starting transfer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,6 +48,7 @@
         <nav class=" d-none d-lg-flex align-items-center justify-content-between">
             <a routerLink="/" [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active" class="app-link  px-3 h-100 app-color-blue d-flex align-items-center">Home</a>
             <a routerLink="/page/products" routerLinkActive="active" class="app-link px-3 h-100 app-color-blue d-flex align-items-center">Products</a>
+            <a routerLink="/admin" routerLinkActive="active" class="app-link px-3 h-100 app-color-blue d-flex align-items-center">Dashboard</a>
         </nav>
     </div>
 </header>
