--- a/src/app/components/dashboard/dashboad-layout/dashboad-layout.component.html
+++ b/src/app/components/dashboard/dashboad-layout/dashboad-layout.component.html
@@ -1,6 +1,6 @@
-<main>
+<main class="bg-whit">
     <!-- <h3>Dashboard</h3> -->
-    <div class="container">
+    <!-- <div class="container">
         <nav class="d-flex justify-content-center">
             <div>
                 <a mat-button class="w-100" routerLinkActive="app-green-bg  text-white" routerLink="/admin/transfer">
@@ -13,9 +13,9 @@
                     <mat-icon>link</mat-icon> History </a>
             </div>
         </nav>
-    </div>
+    </div> -->
 
-    <div class="container bg-white py-2 shadow-sm">
+    <div class="container bg-whit py-2 shadow-s">
         <div class="py-4">
             <router-outlet></router-outlet>
         </div>
