--- a/src/app/components/dashboard/transfer/transfer.component.html
+++ b/src/app/components/dashboard/transfer/transfer.component.html
@@ -1,25 +1,37 @@
-<main class="animated fadeInLeft faster bg-white">
+<div *ngIf="success" class="text-center">
+    <svg class="mx-auto" width="70" height="70" viewBox="0 0 61 61" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M30.5 61C47.3447 61 61 47.3447 61 30.5C61 13.6553 47.3447 0 30.5 0C13.6553 0 0 13.6553 0 30.5C0 47.3447 13.6553 61 30.5 61Z" fill="#1DCF9F" fill-opacity="0.21"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M30.4999 48.2105C40.281 48.2105 48.2102 40.2813 48.2102 30.5001C48.2102 20.719 40.281 12.7898 30.4999 12.7898C20.7187 12.7898 12.7896 20.719 12.7896 30.5001C12.7896 40.2813 20.7187 48.2105 30.4999 48.2105Z" fill="#1DCF9F"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M17.5679 31.2422L19.6724 29.1377C20.2105 28.5963 20.9424 28.2919 21.7057 28.2919C22.4691 28.2919 23.2009 28.5963 23.739 29.1377L28.2124 33.611L37.7589 24.0646C38.297 23.5232 39.0289 23.2188 39.7922 23.2188C40.5556 23.2188 41.2874 23.5232 41.8255 24.0646L43.93 26.1792L28.2022 41.8867L17.5679 31.2422Z" fill="white"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M29.2595 32.5537L28.2021 33.611L32.34 37.7489L29.2595 32.5537Z" fill="#E2ECF3"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M41.9272 20.0996C43.5331 20.0996 44.8349 18.7978 44.8349 17.1919C44.8348 17.9702 45.1468 18.716 45.7009 19.2624C46.255 19.8089 47.0051 20.1104 47.7832 20.0996C46.1813 20.0996 44.8812 21.3952 44.8756 22.9971C44.8729 22.2206 44.5598 21.4774 44.006 20.9331C43.4522 20.3888 42.7037 20.0887 41.9272 20.0996Z" fill="#FFD05B"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M13.8267 39.0399C15.1743 39.0399 16.2667 37.9475 16.2667 36.5999C16.2667 35.2523 15.1743 34.1599 13.8267 34.1599C12.4791 34.1599 11.3867 35.2523 11.3867 36.5999C11.3867 37.9475 12.4791 39.0399 13.8267 39.0399Z" fill="#784FEA"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M47.5803 38.6335C48.4787 38.6335 49.2069 37.9052 49.2069 37.0068C49.2069 36.1084 48.4787 35.3801 47.5803 35.3801C46.6819 35.3801 45.9536 36.1084 45.9536 37.0068C45.9536 37.9052 46.6819 38.6335 47.5803 38.6335Z" fill="#784FEA"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.2664 49.6133C16.9402 49.6133 17.4864 49.0671 17.4864 48.3933C17.4864 47.7196 16.9402 47.1733 16.2664 47.1733C15.5926 47.1733 15.0464 47.7196 15.0464 48.3933C15.0464 49.0671 15.5926 49.6133 16.2664 49.6133Z" fill="#FFD05B"></path></svg>
 
-    <h1 class="text-center mt-3">Send Money</h1>
+    <p>Transfer was successful</p>
+</div>
+
+
+<main *ngIf="!success" class="animated fadeInUp faste bg-whie">
+    <h1 class="text-center ">Send Money</h1>
 
     <div class="row">
         <div class="col-lg-4 mx-auto">
-            <form [formGroup]="transferForm" (ngSubmit)="onFormSubmit()" class="form animated faster fadeInRight">
+            <form [formGroup]="transferForm" (ngSubmit)="onFormSubmit()" class="form">
 
-                <mat-form-field class="w-100" appearance="outline">
+                <!-- <mat-form-field class="w-100" appearance="outline">
                     <mat-label>Country</mat-label>
                     <mat-select formControlName="countryCode" placeholder="Country" required>
-                        <mat-option (click)="getBanks(country?.code)" *ngFor="let country of countries" [value]="country?.code">{{country?.name}}</mat-option>
+                        <mat-option (click)="getBanks(country?.code, country?.currency)" *ngFor="let country of countries" [value]="country?.code">{{country?.name}}</mat-option>
                     </mat-select>
                     <mat-hint class="text-center" *ngIf="submitted && f.country.errors?.required || (f.country?.errors && (f.country?.touched))" class="text-danger">Country is required</mat-hint>
+                </mat-form-field> -->
+
+                <mat-form-field class="w-100" appearance="outline">
+                    <mat-label>Amount</mat-label>
+                    <input type="number" matInput formControlName="amount" placeholder="Amount" required>
                 </mat-form-field>
+
+                <p>Receiver's bank info</p>
 
                 <mat-form-field class="w-100" appearance="outline">
                     <mat-label>Bank</mat-label>
                     <mat-select formControlName="bankCode" placeholder="Bank" required>
                         <mat-option *ngFor="let bank of banks" [value]="bank?.code">{{bank?.name}}</mat-option>
                     </mat-select>
-                    <mat-hint class="text-center" *ngIf="submitted && f.bank.errors?.required || (f.bank?.errors && (f.bank?.touched))" class="text-danger">Bank is required</mat-hint>
                 </mat-form-field>
 
                 <mat-form-field class="w-100" appearance="outline">
@@ -33,14 +45,16 @@
                     <mat-icon class="app-green-color" matSuffix>done_outline</mat-icon>
                 </mat-form-field>
 
-
-
+                <mat-form-field class="w-100" appearance="outline">
+                    <mat-label>Reason</mat-label>
+                    <input matInput formControlName="reason" placeholder="Reason" required>
+                </mat-form-field>
 
                 <button tabindex="-1" mat-raised-button class=" shadow-sm app-green-bg text-white rounded-60  w-100 mt-2  py-1">
                 SEND MONEY 
                 </button>
 
-                <pre>{{transferForm.value | json}}</pre>
+                <!-- <pre>{{transferForm.value | json}}</pre> -->
 
                 <!-- <pre>{{banks | json}}</pre> -->
                 <!-- <pre>{{countries | json}}</pre> -->
