--- a/src/app/components/dashboard/transfer/transfer.component.scss
+++ b/src/app/components/dashboard/transfer/transfer.component.scss
@@ -9,7 +9,8 @@
             color: transparent;
             // background-color: red;
             // background-color: var(--appRedLight);
-            background-color: #eee;
+            background-color: #ffffff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 9px !important;
         }
         /* Font color */
